@@ -1,3 +1,9 @@
+2006-04-13  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/data.py (KickstartRepoData):  Added.
+	* pykickstart/parser.py (KickstartHandlers.doRepo):  Add options.
+	* pykickstart/writer.py (KickstartWriter.doRepo):  Likewise.
+
 2006-04-11  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/parser.py (KickstartParser.addPackages):  Ignore
